--- a/CSS/style.css
+++ b/CSS/style.css
@@ -664,20 +664,22 @@ header {
 
 .btn--contact {
   width: 50rem;
-  text-transform: uppercase;
-  letter-spacing: 0.5rem;
   padding: 1.6rem 3.6rem;
+  transition: all 0.2s;
+  cursor: pointer;
+  /* color */
   color: #6d7856;
   box-shadow: 0 0 1rem rgba(67, 71, 57, 0.268);
-  transition: all 0.2s;
-  text-decoration: none;
   background-color: #fcfcfc;
   border: none;
+  /* text */
+  text-transform: uppercase;
+  letter-spacing: 0.5rem;
+  text-decoration: none;
 }
 
 .btn--contact:hover {
   background-color: #e2e4dd;
-  cursor: pointer;
 }
 
 .ps {
@@ -687,16 +689,40 @@ header {
 /* **************************** */
 /* EACH PATTERN PAGE */
 /* **************************** */
-.pattern-page {
-  width: 90%;
-}
-.page-section {
-  padding: 9rem 0 11rem 0;
+
+.page-section--product {
   display: none;
+  padding: 5rem 3rem 11rem 3rem;
+  /* position */
+  position: fixed;
+  top: 12%;
+  right: 5%;
+  width: 90%;
+  height: 85vh;
+  z-index: 4;
+  /* scroll */
+  overflow: scroll;
+  scroll-behavior: smooth;
+  /* colors */
+  background-color: rgba(252, 252, 252, 0.99);
+  border: 2px solid #6d7856;
+  box-shadow: 0 0 4.8rem rgba(0, 0, 0, 0.5);
+}
+.active {
+  display: block;
 }
 
-.active {
-  display: inherit;
+.pattern-page-icon {
+  color: #6d7856;
+  font-size: 4rem;
+  /* position */
+  position: fixed;
+  top: 15%;
+  right: 7%;
+  cursor: pointer;
+}
+.pattern-page-icon:hover {
+  color: #8a9378;
 }
 
 .pattern-img-section {
@@ -778,7 +804,7 @@ header {
 
 .pattern-info {
   grid-row: 2;
-  grid-column: 1 / 4;
+  grid-column: 1 / span 4;
 }
 
 .pattern-description {
