--- a/CSS/style.css
+++ b/CSS/style.css
@@ -98,6 +98,9 @@ body {
 .grid--4-cols {
   grid-template-columns: 1fr 1fr 1fr 1fr;
 }
+.grid--5-cols {
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
 .grid--6-cols {
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
 }
@@ -689,10 +692,9 @@ header {
 /* **************************** */
 /* EACH PATTERN PAGE */
 /* **************************** */
-
 .page-section--product {
   display: none;
-  padding: 5rem 3rem 11rem 3rem;
+  padding: 5rem 10rem 11rem 10rem;
   /* position */
   position: fixed;
   top: 12%;
@@ -725,41 +727,68 @@ header {
   color: #8a9378;
 }
 
+.product-content {
+  row-gap: 5rem;
+}
+
+/* ---- CAROUSEL ----- */
 .pattern-img-section {
-  grid-column: 1 / 4;
-  display: grid;
-  grid-template-columns: 1fr 5fr;
-  gap: 3.2rem;
-}
-
-.pattern-img {
-  width: 100%;
-  padding-top: 1rem;
-  filter: opacity(50%);
-  cursor: pointer;
-}
-
-.main-img {
-  display: block;
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #8a9378;
-  grid-column: 2;
-}
-
-.pattern-img-main {
-  grid-column: 2 / -1;
-}
-
-.pattern-img-other {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  grid-column: 1;
-  grid-row: 1;
-  margin-right: auto;
+  height: 500px;
+}
+.slider {
+  height: 500px;
+  width: 400px;
+  overflow-x: hidden;
+  position: relative;
+}
+.slide {
+  position: absolute;
+  transition: all 0.5s;
+  padding: 0.7rem;
+  border: 1px solid #8a9378;
+}
+.slide img {
+  width: 100%;
+  height: 100%;
+}
+.pattern-img {
+  width: 100%;
+}
+.slide-btn {
+  width: 45px;
+  height: 45px;
+  border: none;
+  border-radius: 50%;
+  z-index: 5;
+  cursor: pointer;
+  background-color: rgba(252, 252, 252, 0.99);
+  font-size: 18px;
+  text-align: center;
+  box-shadow: 0 0 4.8rem rgba(0, 0, 0, 0.3);
+}
+.slide-btn:active {
+  transform: scale(1.1);
+}
+.fa-angle-right,
+.fa-angle-left {
+  color: #6d7856;
+  font-size: 2.5rem;
+  z-index: 6;
+}
+.btn-prev {
+  position: absolute;
+  top: 450px;
+  left: 80px;
+}
+.btn-next {
+  position: absolute;
+  top: 450px;
+  left: 480px;
 }
 
+/* ---- PRODUCT CONTENT ----- */
 .sticker {
   color: #8a9378;
   letter-spacing: 0.15rem;
@@ -804,12 +833,12 @@ header {
 
 .pattern-info {
   grid-row: 2;
-  grid-column: 1 / span 4;
+  grid-column: 1 / -1;
 }
 
 .pattern-description {
-  grid-column: 4 / -1;
-  padding-right: 10rem;
+  grid-column: 2 / -1;
+  margin-left: 3rem;
 }
 
 /* **************************** */
