--- a/CSS/style.css
+++ b/CSS/style.css
@@ -521,9 +521,18 @@ header {
   font-weight: 400;
   font-size: 1.6rem;
 }
+.lang-p {
+  font-size: 1.6rem;
+  color: #576045;
+}
+
+.pattern-text--ps {
+  color: #8a9378;
+  text-align: center;
+  margin-top: 9rem;
+}
 
 /* LANGUAGE TAGS */
-
 .norsk::after {
   content: "norsk";
   font-size: 1.6rem;
@@ -536,9 +545,8 @@ header {
   text-align: center;
   text-transform: uppercase;
 }
-
 .svenska::after {
-  content: "svenska";
+  content: "norsk | svenska";
   font-size: 1.6rem;
   color: #6d7856;
   background-color: #fcfcfc;
@@ -549,9 +557,8 @@ header {
   text-align: center;
   text-transform: uppercase;
 }
-
 .english::after {
-  content: "english";
+  content: "norsk | english";
   font-size: 1.6rem;
   color: #6d7856;
   background-color: #fcfcfc;
@@ -561,71 +568,6 @@ header {
   padding: 0.7rem 1.4rem;
   text-align: center;
   text-transform: uppercase;
-}
-
-.pattern-text--ps {
-  color: #8a9378;
-  text-align: center;
-  margin-top: 9rem;
-}
-
-/* FILTER MENU */
-
-.dropdown {
-  width: 22rem;
-  position: relative;
-  box-shadow: 0 2.4rem 4.8rem rgba(52, 58, 64, 0.08);
-}
-
-.dropbtn {
-  text-transform: uppercase;
-  font-weight: 500;
-  font-size: 2rem;
-  color: #7c8667;
-  letter-spacing: 0.5rem;
-  padding: 0 0 1rem 1rem;
-  cursor: pointer;
-  border: none;
-  background-color: #fcfcfc;
-  transition: all 0.5s;
-}
-
-.dropbtn:hover,
-.dropbtn:active {
-  color: #576045;
-}
-
-.dropDownContent {
-  position: absolute;
-  display: none;
-  flex-direction: column;
-  gap: 2rem;
-  z-index: 1;
-  width: 22rem;
-  padding: 1rem;
-  background-color: rgba(252, 252, 252, 0.95);
-  transition: all 0.5s;
-  border-bottom: 0.1rem solid rgba(138, 147, 120, 0.7);
-  border-left: 0.1rem solid rgba(138, 147, 120, 0.7);
-  border-right: 0.1rem solid rgba(138, 147, 120, 0.7);
-}
-
-.open {
-  display: flex;
-}
-
-.filter-item {
-  font-size: 2rem;
-  color: #7c8667;
-  font-weight: 400;
-  text-decoration: none;
-  padding: 0.5rem 1rem;
-}
-
-.filter-item:hover {
-  color: #576045;
-  cursor: pointer;
-  background-color: #fff;
 }
 
 /* **************************** */
