--- a/CSS/style.css
+++ b/CSS/style.css
@@ -668,6 +668,7 @@ header {
   display: flex;
   flex-direction: column;
   height: 500px;
+  position: relative;
 }
 .slider {
   height: 500px;
@@ -699,6 +700,7 @@ header {
 
 .arrow-icon {
   color: rgba(252, 252, 252, 0.758);
+
   font-size: 4rem;
   z-index: 6;
 }
@@ -708,13 +710,13 @@ header {
 
 .btn-prev {
   position: absolute;
-  top: 550px;
-  left: 190px;
+  top: 45%;
+  left: 5%;
 }
 .btn-next {
   position: absolute;
-  top: 550px;
-  left: 535px;
+  top: 45%;
+  right: 5%;
 }
 
 /* ---- PRODUCT CONTENT ----- */
