Fix vidoe nav bar

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -575,7 +575,7 @@ header {
 }
 
 /* **************************** */
-/* KNITTING VIDEOES SECTION */
+/* KNITTING VIDEOES PAGE */
 /* **************************** */
 .videos-page-heading {
   text-align: center;
@@ -589,18 +589,18 @@ header {
   gap: 6rem;
 }
 .video-nav {
-  display: flex;
-  gap: 1rem;
-  padding: 3rem 3rem 1rem 3rem;
+  width: 100vw;
+  display: block;
+  text-align: center;
+  padding: 3rem 3rem 2rem 3rem;
   position: fixed;
   top: 10%;
-  left: 50%;
-  transform: translate(-50%);
+  left: 0;
   background-color: #fcfcfc;
 }
 .video-nav--item {
   color: #6d7856;
-  padding-left: 1rem;
+  padding: 0 1rem 0 1rem;
   border-left: 1px solid #7c8667;
   text-decoration: none;
 }
